<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Farmapal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mie_prescrizioni">Le mie prescrizioni</string>
    <string name="lista_completa">Lista completa</string>
    <string name="cerca_farmacia">Cerca farmacia</string>
    <string name="title_activity_lista_completa">ListaCompletaActivity</string>
    <string name="title_activity_mie_prescrizioni">MiePrescrizioniActivity</string>
    <string name="nuova_prescrizione">Nuova prescrizione</string>
    <string name="title_activity_nuova_prescrizione">NuovaPrescrizioneActivity</string>
    <string name="farmaco">Farmaco</string>
    <string name="seleziona_farmaco">Seleziona farmaco</string>
    <string name="paziente">Paziente</string>

    <string-array name="array_nuovo_paziente">
        <item>Nuovo paziente</item>
    </string-array>

    <string name="prescritto_da">Prescritto da</string>
    <string name="data_inizio">Data di inizio cura:</string>
    <string name="data_fine">Data di fine cura:</string>
    <string name="giorni">giorni</string>
    <string name="razione">razione/i</string>
    <string name="nome_medico">nome del medico</string>
    <string name="quantita">quantità</string>
    <string name="numero_giorni">num giorni</string>
    <string name="fatto">Fatto</string>
    <string name="title_activity_lista_farmacie">ListaFarmacie</string>
    <string name="nome_farmacia">Nome Farmacia</string>
    <string name="text_view_farmacia">Farmacia: </string>
    <string name="text_view_indirizzo_farmacia">Indirizzo: </string>
    <string name="condividi">Condividi</string>

    <string-array name="array_qta">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="array_frequenza">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="razione1">Razione 1:</string>
    <string name="razione2">Razione 2:</string>
    <string name="razione3">Razione 3:</string>
    <string name="razione4">Razione 4:</string>
    <string name="razione5">Razione 5:</string>
    <string name="razione6">Razione 6:</string>
    <string name="title_activity_lista_completa_for_result">ListaCompletaForResultActivity</string>
    <string name="title_activity_descrizione_farmacia_dialog">DescrizioneFarmaciaDialog</string>
    <string name="title_activity_conferma_assunzione_dialog">ConfermaAssunzioneDialog</string>
    <string name="nome_paziente">nome paziente</string>
    <string name="title_activity_dettaglio_prescrizione">DettaglioPrescrizioneActivity</string>
    <string name="title_activity_selezione_giorni">SelezioneGiorniActivity</string>
    <string name="lunedi">Lunedì</string>
    <string name="martedi">Martedì</string>
    <string name="mercoledi">Mercoledì</string>
    <string name="giovedi">Giovedì</string>
    <string name="venerdi">Venerdì</string>
    <string name="sabato">Sabato</string>
    <string name="domenica">Domenica</string>
    <string name="seleziona_tutto">Spunta tutti</string>
    <string name="deseleziona_tutto">Togli tutti </string>
    <string name="riepilogo">Non hai ancora selezionato i giorni</string>
    <string name="seleziona_giorni">Selezione giorni</string>
    <string name="elimina_prescrizione">Elimina prescrizione</string>
    <string name="elimina_farmaco">Elimina farmaco</string>
    <string name="modifica_prescrizione">Modifica prescrizione</string>
    <string name="dettagli_farmaco">Dettagli farmaco</string>
    <string name="title_activity_dettaglio_farmaco">DettaglioFarmacoActivity</string>
    <string name="title_activity_modifica_prescrizione">ModificaPrescrizioneActivity</string>
    <string name="aggiungi_farmaco">Aggiungi farmaco</string>
    <string name="title_activity_nuovo_farmaco">NuovoFarmacoActivity</string>
    <string name="nome_farmaco">Nome farmaco</string>
    <string name="principi_attivi">Principi attivi</string>
    <string name="peso">Peso</string>
    <string name="tipo">Tipo</string>
    <string name="somministrazione">Somministrazione</string>
    <string name="indicazioni">Indicazioni</string>
    <string name="controindicazioni">Controindicazioni</string>
    <string name="effetti_collaterali">Effetti collaterali</string>
    <string name="dettagli_farmacia">Dettagli Farmacia</string>
    

</resources>