<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SelezioneGiorniLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelezioneGiorniActivity" >

    <LinearLayout
        android:id="@+id/SelezioneGiorniLayoutGiorni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBoxLun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunedi" />

        <CheckBox
            android:id="@+id/checkBoxMar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/martedi" />

        <CheckBox
            android:id="@+id/checkBoxMer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercoledi" />

        <CheckBox
            android:id="@+id/checkBoxGio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giovedi" />
        <CheckBox
            android:id="@+id/checkBoxVen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venerdi" />

        <CheckBox
            android:id="@+id/checkBoxSab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabato" />

        <CheckBox
            android:id="@+id/checkBoxDom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domenica" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SelezioneGiorniPulsanti"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/SelezioneGiorniActionsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/SelezioneGiorniSelezionaTutto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seleziona_tutto"/>

            <Button
                android:id="@+id/SelezioneGiorniDeselezionaTutto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deseleziona_tutto" />

        </LinearLayout>

        <Button
            android:id="@+id/SelezioneGiorniFatto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fatto" />
    </LinearLayout>

</LinearLayout>
