<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnPrescrizioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/mie_prescrizioni"
        android:onClick="goMiePrescrizioni" />

     <Button
        android:id="@+id/btnListaCompleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPrescrizioni"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="goListaCompleta"
        android:text="@string/lista_completa" />
    
    <Button
        android:id="@+id/btnCercaFarmacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnListaCompleta"
        android:layout_below="@+id/btnListaCompleta"
        android:layout_marginTop="44dp"
        android:text="@string/cerca_farmacia" />

   

</RelativeLayout>
