<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".NuovoFarmacoActivity" >

    <LinearLayout
        android:id="@+id/NuovoFarmacoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NuovoFarmacotextViewFarmaco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/nome_farmaco"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/NuovoFarmacoeditTextFarmaco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nome_farmaco"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NuovoFarmacotextViewPrincipiAttivi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/principi_attivi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/NuovoFarmacoeditTextPrincipiAttivi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/principi_attivi"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NuovoFarmacotextViewPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/peso"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/NuovoFarmacoeditTextPeso"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/peso"
                android:singleLine="true" />

            <TextView
                android:id="@+id/NuovoFarmacotextViewTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/tipo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/NuovoFarmacoeditTextTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/tipo"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NuovoFarmacotextViewSomministrazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/somministrazione"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/NuovoFarmacoeditTextSomministrazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/somministrazione"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/NuovoFarmacotextViewIndicazioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicazioni"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/NuovoFarmacoeditTextIndicazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/indicazioni"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/NuovoFarmacotextViewControindicazioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controindicazioni"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/NuovoFarmacoeditTextControindicazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/controindicazioni"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/NuovoFarmacotextViewEffettiCollaterali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effetti_collaterali"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/NuovoFarmacoeditTextEffettiCollaterali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/effetti_collaterali"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/NuovoFarmacoLayoutBtnFatto"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/NuovoFarmacobuttonFatto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fatto" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>